# DCI

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
data/metadata/caltech256/: split_TAI_Caltech256.json
data/metadata/cifar100/: labels.json
data/metadata/cub200/: split_TAI_CUB-200-2011.json
dci/: __init__.py  configs.py  runner.py
docs/: README.md  index.html  script.js  styles.css
tests/: test_runner.py
