[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dci-inference"
version = "0.1.0"
description = "Divide-and-Conquer Inference for large-scale visual recognition with MLLMs"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "FourierAI"}]
dependencies = [
  "openai>=1.0,<3",
  "tqdm>=4.65,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.6,<1",
]

[project.scripts]
dci-eval = "dci.runner:main"

[project.urls]
Repository = "https://github.com/FourierAI/DCI"
Issues = "https://github.com/FourierAI/DCI/issues"

[tool.setuptools.packages.find]
include = ["dci*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py39"
